@@ -1,3 +1,4 @@
+2536 [Audio Encoder]        improved custom command line handling
 2535 [MP4 Muxer]            fixed Apple chapters handling. Patch by Eli Bildirici #67
                             fixed remaining temporay chapter file after mux
 2534 [x265]                 added n-pass support
